force-app/main/default/objects/leaseworks__Credit_Score__c/leaseworks__Credit_Score__c.object-meta.xml
<CustomObject>
    <label>Z_Unused_OP Credit Score</label>
    <nameField>
        <label>Credit Score Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_Unused_OP Credit Score</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>