force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Cash__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Cash__c</fullName>
    <label>Z_Unused_OP Cash</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>