force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__EBITDAR__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__EBITDAR__c</fullName>
    <description>(Earnings before Interest, Tax, Depreciation,
Amortization and Rents)/Total Revenues</description>
    <inlineHelpText>(Earnings before Interest, Tax, Depreciation,
Amortization and Rents)/Total Revenues</inlineHelpText>
    <label>Z_Unused_OP EBITDAR</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>