force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Financial_Risk_Profile__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Financial_Risk_Profile__c</fullName>
    <label>Z_Unused_OP Financial Risk Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Moderate</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>