force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__LTM_1_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__LTM_1_Rating__c</fullName>
    <label>Z_Unused_OP LTM-1 Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Ratings</valueSetName>
    </valueSet>
</CustomField>