force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Moody_s_Rating__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Moody_s_Rating__c</fullName>
    <label>Z_Unused_OP Moody&apos;s Rating</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aaa</fullName>
            </value>
            <value>
                <fullName>Aa1</fullName>
            </value>
            <value>
                <fullName>Aa2</fullName>
            </value>
            <value>
                <fullName>Aa3</fullName>
            </value>
            <value>
                <fullName>A1</fullName>
            </value>
            <value>
                <fullName>A2</fullName>
            </value>
            <value>
                <fullName>A3</fullName>
            </value>
            <value>
                <fullName>Baa1</fullName>
            </value>
            <value>
                <fullName>Baa2</fullName>
            </value>
            <value>
                <fullName>Baa3</fullName>
            </value>
            <value>
                <fullName>Ba1</fullName>
            </value>
            <value>
                <fullName>Ba2</fullName>
            </value>
            <value>
                <fullName>Ba3</fullName>
            </value>
            <value>
                <fullName>B1</fullName>
            </value>
            <value>
                <fullName>B2</fullName>
            </value>
            <value>
                <fullName>B3</fullName>
            </value>
            <value>
                <fullName>Caa1</fullName>
            </value>
            <value>
                <fullName>Caa2</fullName>
            </value>
            <value>
                <fullName>Caa3</fullName>
            </value>
            <value>
                <fullName>Ca</fullName>
            </value>
            <value>
                <fullName>C</fullName>
            </value>
            <value>
                <fullName>/</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>