force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Rating_Agency_Equivalent_Score__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rating_Agency_Equivalent_Score__c</fullName>
    <label>Z_Unused_OP Rating Agency Equvalnt Scr</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Score</valueSetName>
    </valueSet>
</CustomField>