force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Rating_Status__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Rating_Status__c</fullName>
    <description>Provisional means the the score is based on incomplete information and/or incomplete analysis. Only when a full due diligence is done on a customer, the credit score is considered Final.</description>
    <inlineHelpText>Set to Final only after a full due diligence is done. Set it to Provisional until then.</inlineHelpText>
    <label>Z_Unused_OP Rating Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provisional</fullName>
                <default>true</default>
                <label>Provisional</label>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>