force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Score_for_12_month_period_prior_to_LTM_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Score_for_12_month_period_prior_to_LTM_1__c</fullName>
    <inlineHelpText>Prior to LTM-1</inlineHelpText>
    <label>Z_Unused_2012 Score For 12 Mth Period</label>
    <length>85</length>
    <type>Text</type>
</CustomField>