force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Score_For_12_Mth_Period_Prior_To_LTM_1_N__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Score_For_12_Mth_Period_Prior_To_LTM_1_N__c</fullName>
    <description>Prior to LTM-1</description>
    <inlineHelpText>Prior to LTM-1</inlineHelpText>
    <label>Z_Unused_OP Scr For 12M Prd PriorToLTM-1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>