force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Score_For_12_Mth_Period_To_Recent_LTM_N__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Score_For_12_Mth_Period_To_Recent_LTM_N__c</fullName>
    <description>Score for 12 month period
prior to most recent LTM period</description>
    <inlineHelpText>Score for 12 month period
prior to most recent LTM period</inlineHelpText>
    <label>Z_Unused_OP Scr For 12Mth ProdToRecntLTM</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>