force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Score_For_Most_Recent_12_Mth_LTM_N__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Score_For_Most_Recent_12_Mth_LTM_N__c</fullName>
    <description>Score for most recent
12 month (LTM) period</description>
    <inlineHelpText>Score for most recent
12 month (LTM) period</inlineHelpText>
    <label>Z_Unused Score For Most Recent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>