force-app/main/default/objects/leaseworks__Credit_Score__c/fields/leaseworks__Y_Hidden_New_Credit_Score_Id__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_New_Credit_Score_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is only used for data migration purpose.</description>
    <label>_New Credit Score Id</label>
    <referenceTo>leaseworks__Credit_Score_New__c</referenceTo>
    <relationshipLabel>Z_Unused_OP Credit Score</relationshipLabel>
    <relationshipName>Z_Unused_OP_Credit_Score</relationshipName>
    <type>Lookup</type>
</CustomField>