force-app/main/default/objects/leaseworks__Credit_Score__c/validationRules/leaseworks__Period.validationRule-meta.xml
<ValidationRule>
    <fullName>leaseworks__Period</fullName>
    <active>true</active>
    <description>Year should be unique</description>
    <errorConditionFormula>NOT ( ISBLANK ( leaseworks__Period_New__c) ) 
&amp;&amp; 
( 
NOT ( ISNUMBER ( leaseworks__Period_New__c) ) 
|| 
LEN ( leaseworks__Period_New__c) &lt; 4 
)</errorConditionFormula>
    <errorMessage>Period is 4 digit number. Please provide valid input</errorMessage>
</ValidationRule>